<resources>

    <!-- strings.xml -->
    <string name="your_order">Your Order</string>

    <string name="in_progress">In progress</string>

    <string name="order_place">Order placed</string>

    <string name="deliverying">Deliverying: Thursday 01 november | 10am-2pm</string>

    <string name="day_5h_35m_">0 Day 5h 35m left to complete your order</string>

    <string name="kg_3_">ORDER - 4 +</string>

    <string name="items">Items</string>

    <string name="price">Price</string>

    <string name="qty">Qty</string>

    <string name="crispy_yam_">Crispy Yam Fries</string>

    <string name="my_list">My list</string>

    <string name="discounts">Discounts</string>

    <string name="coming">Coming</string>

    <string name="bresil_mogi">bresil mogiana - nature</string>

    <string name="kg_partir_d">23\u00e2\u0082\u00ac/KG \u00c3\u00a0 partir de 10kg</string>

    <string name="nature">NATURE</string>

    <string name="espresso">ESPRESSO</string>

    <!-- strings.xml -->
    <string name="chocolat">CHOCOLAT</string>

    <string name="add">
        ADD
    </string>

    <string name="label">
        SEARCH
    </string>

    <string name="ordered_aga">
        Ordered again
    </string>

    <string name="delivery_da">
        Delivery date: Mon 21 oct
    </string>

    <string name="stories_abo">
        Stories about producers
    </string>

    <string name="new_product">
        New products
    </string>

    <string name="adipiscing_1">
        New products
    </string>

    <string name="sit_tempor_">
        Sit tempor in egestas eget risus fames massa. Morbi vitae ante tortor lacinia amet cursus est eget nisi. Est mauris nam a euismod in nibh.
    </string>

    <string name="sit_tempor_1">
        Sit tempor in egestas eget risus fames massa. Morbi vitae ante tortor lacinia amet cursus est eget nisi. Est mauris nam a euismod in nibh.
    </string>

    <string name="let_s_get_s">Let’s get started</string>
    <string name="continue_welcome">Continue</string>

    <string name="app_name">LaMulaApp</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="seller_type">Seller</string>
    <string name="client_type">Client</string>

    <!--Navigation Drawer Seller-->
    <string name="op_home_s">Home</string>
    <string name="op_my_store_s">My store</string>
    <string name="op_categories_s">Categories</string>
    <string name="op_review_s">Reviews</string>
    <string name="op_logout_s">Logout</string>

    <!--Navigation Drawer Client-->
    <string name="op_home_c">Home</string>
    <string name="op_my_profile_c">My profile</string>"
    <string name="op_logout_c">Logout</string>

    <!--Bottom Navigation Bar Seller-->
    <string name="op_my_products_s">My products</string>
    <string name="op_my_orders">Orders</string>

    <!--Bottom Navigation Bar Client-->
    <string name="op_store_c">Store</string>
    <string name="op_my_orders_c">My orders</string>


    <string name="txt_welcome">Welcome</string>


    <!--Seller Registration-->
    <string name="txtRegistrationS">Seller registration</string>
    <string name="etSiretS">SIRET number</string>
    <string name="etNameS">Full name</string>
    <string name="etEmailS">Email</string>
    <string name="etAddressS">Address</string>
    <string name="etPhoneS">Phone number</string>
    <string name="etPasswordS">Password</string>
    <string name="etConfirmPasswordS">Confirm password</string>
    <string name="btnRegisterS">Register</string>


    <!--Registration Client-->
    <string name="txtRegistrationC">Client registration</string>
    <string name="etIdC">Identification number"</string>
    <string name="etNameC">Full name</string>
    <string name="etEmailC">Email</string>
    <string name="etPhoneC">Phone number</string>
    <string name="etAddressC">Address</string>
    <string name="etPasswordC">Password</string>
    <string name="etConfirmPasswordC">Confirm password</string>
    <string name="btnRegisterC">Register</string>


    <!--Seller Login-->
    <string name="txtLoginS">Seller Login</string>
    <string name="btnLoginS">Login</string>
    <string name="txtAccountNumber">Do not have an account?</string>
    <string name="tvRegisterS">Register</string>

    <!--Client Login-->
    <string name="txtLoginC">Client Login</string>
    <string name="btnLoginC">Login</string>
    <string name="tvRegisterC">Register</string>

    <!--Products-->
    <string name="txtAddProducts">Add products</string>
    <string name="etNameP">Product name</string>"
    <string name="etDescriptionP">Description</string>
    <string name="Category">Category</string>
    <string name="etQuantityP">Quantity</string>
    <string name="etPackageSizeP">Size</string>
    <string name="etPriceP">Price</string>
    <string name="txtDiscountP">Discount</string>
    <string name="etDiscountedPriceP">Discounted price applied</string>"
    <string name="etDiscountNoteP">Ejem: 10% off</string>
    <string name="btnAddProduct">Add product</string>

    <!--Add Category-->
    <string name="etCategory">Enter category</string>
    <string name="btnAddCategory">Add category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rv_images_product_description">Product Image List</string>
    <string name="exotique">Exotique</string>
    <string name="filtre">Filtre</string>
    <string name="nicaragua">Nicaragua</string>
    <string name="anaerobique">Anaerobique</string>
    <string name="fruite">Fruite</string>
    <string name="colombie">Colombie</string>
    <string name="lav">Lavé</string>
    <string name="spresso">Spresso</string>
    <string name="bresil">Bresil</string>


</resources>