<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.LoginSellerActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtLoginS"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/seller_login"
            android:layout_marginBottom="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmailS"
                android:hint="@string/etEmailS"
                android:drawableStart="@drawable/ico_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPasswordS"
                android:hint="@string/etPasswordS"
                android:drawableStart="@drawable/ico_password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Login Seller Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginS"
            android:text="@string/btnLoginS"
            app:cornerRadius="8dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue"/>

        <!--Question-->
        <TextView
            android:text="@string/txtAccountNumber"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--Register a seller-->
        <TextView
            android:id="@+id/tvRegisterS"
            android:text="@string/tvRegisterS"
            android:textStyle="bold"
            android:textColor="@color/light_blue"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>