<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.SellerRegistrationActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtRegistrationS"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/seller_registration"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <!--Company ID-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etSiretS"
                android:hint="@string/etSiretS"
                android:drawableStart="@drawable/ico_siret_number"
                android:drawablePadding="5dp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Full Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNameS"
                android:hint="@string/etNameS"
                android:drawableStart="@drawable/ico_full_name"
                android:drawablePadding="5dp"
                android:inputType="textPersonName|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmailS"
                android:hint="@string/etEmailS"
                android:drawableStart="@drawable/ico_email"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etAddressS"
                android:hint="@string/etAddressS"
                android:drawableStart="@drawable/ico_address"
                android:drawablePadding="5dp"
                android:inputType="textPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Phone Number-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPhoneS"
                android:hint="@string/etPhoneS"
                android:drawableStart="@drawable/ico_phone"
                android:drawablePadding="5dp"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPasswordS"
                android:hint="@string/etPasswordS"
                android:drawableStart="@drawable/ico_password"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirm Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etConfirmPasswordS"
                android:hint="@string/etConfirmPasswordS"
                android:drawableStart="@drawable/ico_confirm_password"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Registration Seller Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterS"
            android:text="@string/btnRegisterS"
            app:cornerRadius="8dp"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>